# life-simulation-game

./: CMakeLists.txt  GameManager.cpp  GameManager.h  World.cpp  World.h  definitions.h  main.cpp
Organism/: Organism.cpp  Organism.h
Organism/Animal/: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
Organism/Plant/: Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  NightshadeBerry.cpp  NightshadeBerry.h  Plant.cpp  Plant.h  SosnowskyHogweed.cpp  SosnowskyHogweed.h
